--- a/layouts/partials/doc/ping_20s.html
+++ b/layouts/partials/doc/ping_20s.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#ping_20s-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#ping_20s-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -39,6 +51,30 @@ Connection nc = Nats.connect(options);
 
 // Do something with the connection
 
+nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="ping_20s-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/ping_20s.py#L6-17"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(
+   servers=[&#34;nats://demo.nats.io:4222&#34;],
+   # Set Ping Interval to 20 seconds
+   ping_interval=20,
+   )
+
+# Do something with the connection.
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="ping_20s-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/options_samples.ts#L5-12"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
+let nc = await connect({
+    pingInterval: 20*2000, //20s
+    url: &#34;nats://demo.nats.io:4222&#34;
+});
 nc.close();
 </code></pre>
 		
