--- a/layouts/partials/doc/connect_default.html
+++ b/layouts/partials/doc/connect_default.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#connect_default-py">Python</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#connect_default-ts">TypeScript</a>
 		</li>
@@ -45,31 +51,35 @@ nc.close();
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_default-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connect_default.ts#L6-32"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
-try {
-    let nc = await connect();
-    // Do something with the connection
-    console.log(&#39;connected&#39;);
-    nc.close();
-} catch(ex) {
-    console.log(&#39;connection failed&#39;, ex);
-    return;
-}
+		<pre class="tab-pane fade" id="connect_default-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/connect_default.py#L5-13"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+await nc.connect()
+
+# Do something with the connection
+
+await nc.close()
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_default-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connection_samples.ts#L16-35"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
+let nc = await connect();
+// Do something with the connection
+
+// When done close it
+nc.close();
 
 
-// alternatively, you can use the promise api
+// alternatively, you can use the Promise pattern
 let nc1: Client;
 connect()
     .then((c) =&gt; {
         nc1 = c;
         // Do something with the connection
-        console.log(&#39;connected&#39;);
+        t.log(&#39;connected&#39;);
         nc1.close();
-    })
-    .catch((ex) =&gt; {
-        console.log(&#39;connection failed&#39;, ex);
-        return;
     });
+    // add a .catch/.finally
 </code></pre>
 		
 	
