--- a/layouts/partials/doc/connect_status.html
+++ b/layouts/partials/doc/connect_status.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#connect_status-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#connect_status-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -51,6 +63,39 @@ System.out.println(&#34;The Connection is: &#34; &#43; nc.getStatus());
 nc.close();
 
 System.out.println(&#34;The Connection is: &#34; &#43; nc.getStatus());
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_status-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/connect_status.py#L6-27"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(
+   servers=[&#34;nats://demo.nats.io:4222&#34;],
+   )
+
+# Do something with the connection.
+
+print(&#34;The connection is connected?&#34;, nc.is_connected)
+
+while True:
+  if nc.is_reconnecting:
+    print(&#34;Reconnecting to NATS...&#34;)
+    break
+  await asyncio.sleep(1)
+
+await nc.close()
+
+print(&#34;The connection is closed?&#34;, nc.is_closed)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_status-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/event_samples.ts#L87-93"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">if(nc.isClosed()) {
+    t.log(&#39;the client is closed&#39;);
+} else {
+    t.log(&#39;the client is running&#39;);
+}
 </code></pre>
 		
 	
