--- a/layouts/partials/doc/connect_tls.html
+++ b/layouts/partials/doc/connect_tls.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#connect_tls-py">Python</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -94,6 +100,22 @@ public class ConnectTLS {
         }
     }
 }
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_tls-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/connect_tls.py#L7-20"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+ssl_ctx = ssl.create_default_context(purpose=ssl.Purpose.SERVER_AUTH)
+ssl_ctx.load_verify_locations(&#39;ca.pem&#39;)
+ssl_ctx.load_cert_chain(certfile=&#39;client-cert.pem&#39;,
+                        keyfile=&#39;client-key.pem&#39;)
+await nc.connect(io_loop=loop, tls=ssl_ctx)
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;], tls=ssl_ctx)
+
+# Do something with the connection.
+
 </code></pre>
 		
 	
