--- a/layouts/partials/doc/connect_token.html
+++ b/layouts/partials/doc/connect_token.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#connect_token-py">Python</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -40,6 +46,16 @@ Connection nc = Nats.connect(options);
 // Do something with the connection
 
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_token-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/connect_token.py#L6-13"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://mytoken@demo.nats.io:4222&#34;])
+
+# Do something with the connection.
+
 </code></pre>
 		
 	
