--- a/layouts/partials/doc/connect_url.html
+++ b/layouts/partials/doc/connect_url.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#connect_url-py">Python</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="ts">
 		  <a data-toggle="tab" href="#connect_url-ts">TypeScript</a>
 		</li>
@@ -45,31 +51,23 @@ nc.close();
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connect_url.ts#L6-32"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
-try {
+		<pre class="tab-pane fade" id="connect_url-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/connect_url.py#L5-13"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+# Do something with the connection
+
+await nc.close()
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connection_samples.ts#L41-48"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
     let nc = await connect(&#34;nats://demo.nats.io:4222&#34;);
     // Do something with the connection
-    console.log(&#39;connected&#39;);
+
+    // Close the connection
     nc.close();
-} catch(ex) {
-    console.log(&#39;connection failed&#39;, ex);
-    return;
-}
-
-
-// alternatively, you can use the promise api
-let nc1: Client;
-connect(&#34;nats://demo.nats.io:4222&#34;)
-    .then((c) =&gt; {
-        nc1 = c;
-        // Do something with the connection
-        console.log(&#39;connected&#39;);
-        nc1.close();
-    })
-    .catch((ex) =&gt; {
-        console.log(&#39;connection failed&#39;, ex);
-        return;
-    });
 </code></pre>
 		
 	
