--- a/layouts/partials/doc/publish_bytes.html
+++ b/layouts/partials/doc/publish_bytes.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#publish_bytes-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#publish_bytes-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -40,6 +52,28 @@ nc.publish(&#34;updates&#34;, &#34;All is Well&#34;.getBytes(StandardCharsets.UT
 // Make sure the message goes through before we close
 nc.flush(Duration.ZERO);
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="publish_bytes-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/publish_bytes.py#L6-13"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+await nc.publish(&#34;updates&#34;, b&#39;All is Well&#39;)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="publish_bytes-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/publisher_samples.ts#L6-15"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = await connect({
+    url: &#34;nats://demo.nats.io:4222&#34;,
+    payload: Payload.BINARY
+});
+
+let buf = Buffer.allocUnsafe(12);
+buf.fill(&#34;Hello world!&#34;);
+nc.publish(&#39;updates&#39;, buf);
 </code></pre>
 		
 	
