--- a/layouts/partials/doc/request_reply.html
+++ b/layouts/partials/doc/request_reply.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#request_reply-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#request_reply-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -48,6 +60,33 @@ Message msg = nc.request(&#34;time&#34;, null, Duration.ofSeconds(1));
 System.out.println(new String(msg.getData(), StandardCharsets.UTF_8));
 
 // Close the connection
+nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="request_reply-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/request_reply.py#L8-25"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+async def sub(msg):
+  await nc.publish(msg.reply, b&#39;response&#39;)
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+await nc.subscribe(&#34;time&#34;, cb=sub)
+
+# Send the request
+try:
+  msg = await nc.request(&#34;time&#34;, b&#39;&#39;, timeout=1)
+  # Use the response
+  print(&#34;Reply:&#34;, msg)
+except asyncio.TimeoutError:
+  print(&#34;Timed out waiting for response&#34;)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="request_reply-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/publisher_samples.ts#L82-86"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let msg = await nc.request(&#39;time&#39;, 1000);
+t.log(&#39;the time is&#39;, msg.data);
 nc.close();
 </code></pre>
 		
