--- a/layouts/partials/doc/subscribe_json.html
+++ b/layouts/partials/doc/subscribe_json.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#subscribe_json-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -99,6 +105,19 @@ public class SubscribeJSON {
         }
     }
 }
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_json-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/subscriber_samples.ts#L74-84"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = await connect({
+    url: &#34;nats://demo.nats.io:4222&#34;,
+    payload: Payload.JSON
+});
+
+nc.subscribe(&#39;updates&#39;, (err, msg) =&gt; {
+    t.log(&#39;got message:&#39;, msg.data ? msg.data : &#34;no payload&#34;);
+});
+
 </code></pre>
 		
 	
