--- a/layouts/partials/doc/subscribe_queue.html
+++ b/layouts/partials/doc/subscribe_queue.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#subscribe_queue-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#subscribe_queue-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -64,6 +76,33 @@ latch.await();
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_queue-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/subscribe_queue.py#L6-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+future = asyncio.Future()
+
+async def cb(msg):
+  nonlocal future
+  future.set_result(msg)
+
+await nc.subscribe(&#34;updates&#34;, queue=&#34;workers&#34;, cb=cb)
+await nc.publish(&#34;updates&#34;, b&#39;All is Well&#39;)
+
+msg = await asyncio.wait_for(future, 1)
+print(&#34;Msg&#34;, msg)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_queue-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/subscriber_samples.ts#L205-209"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">await nc.subscribe(&#39;updates&#39;, (err, msg) =&gt; {
+    t.log(&#39;worker got message&#39;, msg.data);
+}, {queue: &#34;workers&#34;});
 </code></pre>
 		
 	
