--- a/layouts/partials/doc/subscribe_w_reply.html
+++ b/layouts/partials/doc/subscribe_w_reply.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#subscribe_w_reply-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#subscribe_w_reply-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -68,6 +80,44 @@ nc.publish(msg.getReplyTo(), timeAsBytes);
 // Flush and close the connection
 nc.flush(Duration.ZERO);
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_w_reply-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/subscribe_w_reply.py#L8-31"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+future = asyncio.Future()
+
+async def cb(msg):
+  nonlocal future
+  future.set_result(msg)
+
+await nc.subscribe(&#34;time&#34;, cb=cb)
+
+await nc.publish_request(&#34;time&#34;, new_inbox(), b&#39;What is the time?&#39;)
+await nc.flush()
+
+# Read the message
+msg = await asyncio.wait_for(future, 1)
+
+# Send the time
+time_as_bytes = &#34;{}&#34;.format(datetime.now()).encode()
+await nc.publish(msg.reply, time_as_bytes)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="subscribe_w_reply-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/subscriber_samples.ts#L34-43"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// set up a subscription to process a request
+await nc.subscribe(&#39;time&#39;, (err, msg) =&gt; {
+    if (msg.reply) {
+        nc.publish(msg.reply, new Date().toLocaleTimeString());
+    } else {
+        t.log(&#39;got a request for the time, but no reply subject was set.&#39;);
+    }
+});
 </code></pre>
 		
 	
