--- a/layouts/partials/doc/unsubscribe.html
+++ b/layouts/partials/doc/unsubscribe.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#unsubscribe-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#unsubscribe-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -64,6 +76,44 @@ d.unsubscribe(&#34;updates&#34;);
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="unsubscribe-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/unsubscribe.py#L6-26"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+future = asyncio.Future()
+
+async def cb(msg):
+  nonlocal future
+  future.set_result(msg)
+
+sid = await nc.subscribe(&#34;updates&#34;, cb=cb)
+await nc.publish(&#34;updates&#34;, b&#39;All is Well&#39;)
+
+# Remove interest in subject
+await nc.unsubscribe(sid)
+
+# Won&#39;t be received...
+await nc.publish(&#34;updates&#34;, b&#39;...&#39;)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="unsubscribe-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/subscriber_samples.ts#L56-68"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// set up a subscription to process a request
+let sub = await nc.subscribe(createInbox(), (err, msg) =&gt; {
+    if (msg.reply) {
+        nc.publish(msg.reply, new Date().toLocaleTimeString());
+    } else {
+        t.log(&#39;got a request for the time, but no reply subject was set.&#39;);
+    }
+});
+
+// without arguments the subscription will cancel when the server receives it
+sub.unsubscribe();
 </code></pre>
 		
 	
