--- a/layouts/partials/doc/unsubscribe_auto.html
+++ b/layouts/partials/doc/unsubscribe_auto.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#unsubscribe_auto-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#unsubscribe_auto-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -64,6 +76,50 @@ d.unsubscribe(&#34;updates&#34;, 1);
 
 // Close the connection
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="unsubscribe_auto-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/unsubscribe_auto.py#L6-21"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+async def cb(msg):
+  print(msg)
+
+sid = await nc.subscribe(&#34;updates&#34;, cb=cb)
+await nc.auto_unsubscribe(sid, 1)
+await nc.publish(&#34;updates&#34;, b&#39;All is Well&#39;)
+
+# Won&#39;t be received...
+await nc.publish(&#34;updates&#34;, b&#39;...&#39;)
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="unsubscribe_auto-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/subscriber_samples.ts#L98-121"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// `max` specifies the number of messages that the server will forward.
+// The server will auto-cancel.
+let opts = {max: 10};
+let sub = await nc.subscribe(createInbox(), (err, msg) =&gt; {
+    if (msg.reply) {
+        nc.publish(msg.reply, new Date().toLocaleTimeString());
+    } else {
+        t.log(&#39;got a request for the time, but no reply subject was set.&#39;);
+    }
+}, opts);
+
+// another way is to unsubscribe from the subscription
+let sub2 = await nc.subscribe(createInbox(), (err, msg) =&gt; {
+    if (msg.reply) {
+        nc.publish(msg.reply, new Date().toLocaleTimeString());
+    } else {
+        t.log(&#39;got a request for the time, but no reply subject was set.&#39;);
+    }
+});
+// if the subscription already received 10 messages, the handler
+// won&#39;t get any more messages
+sub2.unsubscribe(10);
 </code></pre>
 		
 	
