--- a/layouts/partials/doc/wildcard_tester.html
+++ b/layouts/partials/doc/wildcard_tester.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#wildcard_tester-py">Python</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -67,6 +73,22 @@ nc.publish(&#34;time.eu.east.warsaw&#34;, formatted.getBytes(StandardCharsets.UT
 
 nc.flush(Duration.ZERO);
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="wildcard_tester-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/wildcard_tester.py#L6-19"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+await nc.publish(&#34;time.us.east&#34;, b&#39;...&#39;)
+await nc.publish(&#34;time.us.east.atlanta&#34;, b&#39;...&#39;)
+
+await nc.publish(&#34;time.eu.east&#34;, b&#39;...&#39;)
+await nc.publish(&#34;time.eu.east.warsaw&#34;, b&#39;...&#39;)
+
+await nc.close()
+
 </code></pre>
 		
 	
